css tricks and mobile

--- a/src/sass/components/_arrow.scss
+++ b/src/sass/components/_arrow.scss
@@ -22,3 +22,13 @@
 .gallery__second .arrow {
     left: -$imgNavButton;
 }
+
+@media screen and (max-width: 770px) {
+    .arrow {
+        right: 0;
+    }
+
+    .gallery__second .arrow {
+        left: 0;
+    }
+}
