--- a/src/css/main.css
+++ b/src/css/main.css
@@ -87,9 +87,10 @@ h1, h2, h3 {
 .button {
   border: 2px solid #F7F8FA;
   color: #F7F8FA;
+  letter-spacing: 2px;
   cursor: pointer;
   background: none;
-  padding: 10px 16px;
+  padding: 16px 18px;
   font-size: 16px; }
   .button:hover {
     background-color: rgba(255, 255, 255, 0.2); }
@@ -97,7 +98,7 @@ h1, h2, h3 {
 .container {
   max-width: 100%;
   margin: 0 auto;
-  border: 1px solid red; }
+  padding: 0 10px; }
 
 img {
   object-fit: cover;
@@ -145,6 +146,12 @@ img {
 .gallery__second .arrow {
   left: -40px; }
 
+@media screen and (max-width: 770px) {
+  .arrow {
+    right: 0; }
+  .gallery__second .arrow {
+    left: 0; } }
+
 .logo {
   color: #F7F8FA;
   display: flex;
@@ -162,6 +169,9 @@ img {
       height: 64px;
       line-height: 58px;
       font-size: 40px; }
+      .logo__icon--footer-mod:hover {
+        color: #aaa;
+        border-color: #aaa; }
   .logo__brand {
     margin-left: 20px;
     letter-spacing: 8px;
@@ -177,6 +187,16 @@ img {
   #hero nav > a:hover,
   #footer nav > a:hover {
     color: #d1d4d5; }
+
+@media screen and (max-width: 770px) {
+  #hero nav {
+    display: none; }
+  #footer nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    #footer nav > a {
+      padding: 10px 0; } }
 
 #header {
   background-image: linear-gradient(rgba(0, 66, 123, 0.8), rgba(0, 66, 123, 0)); }
@@ -197,7 +217,7 @@ img {
   overflow: hidden; }
   #hero > .container {
     position: relative;
-    padding: 160px 0;
+    padding: 160px 10px;
     width: 1100px;
     height: calc(100vh - 100px); }
     #hero > .container > h2 {
@@ -216,8 +236,14 @@ img {
     #hero > .container > .see-more {
       text-align: center;
       position: absolute;
-      bottom: 5%;
-      left: 47%; }
+      bottom: 3%;
+      left: 47%;
+      line-height: 24px; }
+
+@media screen and (max-width: 770px) {
+  #hero > .container > h1 {
+    font-size: 76px;
+    letter-spacing: -2px; } }
 
 #content,
 #bonus-content {
@@ -239,6 +265,11 @@ img {
   max-width: 1376px;
   text-align: left;
   padding: 0 200px 0 20px; }
+
+@media screen and (max-width: 770px) {
+  #content > .container > h2,
+  #bonus-content > .container > h2 {
+    font-size: 48px; } }
 
 .gallery {
   background-color: #F7F8FA;
@@ -264,6 +295,16 @@ img {
     padding-left: 20px;
     padding-right: 172px; }
 
+@media screen and (max-width: 770px) {
+  .gallery > .container {
+    flex-direction: column; }
+    .gallery > .container > .img-viewer {
+      width: 100%; }
+    .gallery > .container > aside {
+      width: 100%;
+      padding-left: 10px;
+      padding-right: 20%; } }
+
 #footer {
   padding: 26px 0;
   background-color: #1a262f; }
@@ -278,3 +319,13 @@ img {
       margin-left: 28px;
       color: #aaa;
       font-size: 14px; }
+
+@media screen and (max-width: 770px) {
+  #footer > .container {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+    #footer > .container > .logo {
+      margin: 0 auto 26px; }
+    #footer > .container > .copyright {
+      margin: 20px 0 10px; } }
