--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -1,9 +1,10 @@
 .button {
     border: 2px solid $almostWhite;
     color: $almostWhite;
+    letter-spacing: 2px;
     cursor: pointer;
     background: none;
-    padding: 10px 16px;
+    padding: 16px 18px;
     font-size: 16px;
     &:hover {
         background-color: rgba(255,255,255,.2);
