--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -1,5 +1,6 @@
 .container {
     max-width: 100%;
     margin: 0 auto;
-    border: 1px solid red;
+    padding: 0 10px;
+    // border: 1px solid red;
 }
