--- a/src/sass/layout/_content.scss
+++ b/src/sass/layout/_content.scss
@@ -25,3 +25,15 @@
     text-align: left;
     padding: 0 200px 0 20px;
 }
+
+@media screen and (max-width: 770px) {
+    #content,
+    #bonus-content {
+
+        > .container {
+            > h2 {
+                font-size: $headerUpperMedium;
+            }
+        }
+    }
+}
